fix broken css

--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,6 @@ html {
   font-size: 100%;
 }
 
-.thankyou-page {
-    background: #071428;
-    height: 100vh;
 
 /*---------------------------------------
     Typorgraphy
@@ -667,7 +664,6 @@ footer {
   }
 
 }
-
 
 
 
